<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/todoMatch"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_vertical_margin"
    android:layout_marginRight="@dimen/activity_vertical_margin"
    tools:context=".U2_A14AlbertoAB"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        style="@style/todoMatch">

        <EditText
            style="@style/matchWrap"
            android:id="@+id/idTexto"
            android:hint="@string/textoArriba"
            android:textSize="@dimen/activity_vertical_margin"
            android:background="@color/verde"
            android:textColor="@color/gris"
            android:capitalize="words"/>

        <CheckBox
            android:id="@+id/checkBoton"
            style="@style/todoWrap"
            android:text="@string/textoFixo"/>

        <Button
            android:id="@+id/cambiarBoton"
            style="@style/todoWrap"
            android:text="@string/boton"
            android:layout_gravity="center"
            />
        <TextView
            android:id="@+id/oculto"
            style="@style/matchWrap"
            android:text="@string/textoCambiante"
            android:textSize="@dimen/texto"
            android:textColor="@color/rojo"
            />
        <RadioGroup
            android:id="@+id/rgId"
            android:orientation="horizontal"
            style="@style/matchWrap">
            <RadioButton
                android:id="@+id/colorRoxo"
                style="@style/estiloRB"
                android:layout_weight="1"
                android:text="@string/rojo"
                android:checked="true"
                />
            <RadioButton
                android:id="@+id/colorAzul"
                style="@style/estiloRB"
                android:layout_weight="1"
                android:text="@string/azul"
                />
        </RadioGroup>
        <View
            style="@style/estiloLineas"/>
        <Spinner
            android:id="@+id/spinnerProvincias"
            style="@style/todoWrap"
            android:entries="@array/array_provincias"/>
        <View
            style="@style/estiloLineas"/>
        <ImageView
            android:id="@+id/miCasa"
            android:layout_gravity="center"
            style="@style/todoWrap"
            android:src="@mipmap/fontinhas"
            android:tag="@string/tostada1"
            android:onClick="clickImaxe"
            android:scaleType="center"/>
        <View
            style="@style/estiloLineas"/>
        <LinearLayout
            style="@style/todoMatch"
            android:gravity="bottom"
            android:orientation="vertical">
            <Chronometer
                android:id="@+id/cronometro"
                style="@style/todoWrap"
                android:layout_gravity="center"
                android:onClick="onStartClick"
                android:text="@dimen/texto"/>
            <Switch
                android:id="@+id/idSwitch"
                style="@style/todoWrap"
                android:layout_gravity="bottom|center"
                android:textOn="@string/on"
                android:textOff="@string/off" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
